Prevent local file stream leaks during secure traversal
Automated review flagged that openSecureParent could leave a SecureDirectoryStream open when traversal fails after a child stream is opened. The traversal now closes owned streams on IOException or runtime rejection, and the download header uses the Charset overload already used elsewhere in this service.

Constraint: SecureDirectoryStream traversal must fail closed without leaking intermediate directory handles

Rejected: Ignore the review as theoretical | repeated upload/download failures could exhaust descriptors

Confidence: high

Scope-risk: narrow

Tested: git diff --check

Tested: ./gradlew test --tests com.fairing.fairplay.core.service.LocalFileServiceTest --tests com.fairing.fairplay.core.config.SecurityConfigPublicSurfaceTest --tests com.fairing.fairplay.core.config.UploadStaticResourceSecurityTest --tests com.fairing.fairplay.event.service.EventDetailModificationRequestServiceTest --tests com.fairing.fairplay.settlement.service.SettlementDisputeServiceTest

Co-authored-by: OmX <omx@oh-my-codex.dev>